--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,206 @@
-.App {
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+body{
+  overflow-x: hidden;
+}
+.header-app{
+  width: 100%;
+  min-height: 100vh;
+  background: linear-gradient(to bottom,rgba(0,0,0,0.1),rgba(0,0,0,1)),url('./assets/bg2.jpg');
+  background-size: cover;
+  background-position: bottom;
+  height: auto;
+}
+.logo h1{
+  font-family: 'Pacifico', cursive;
+  color: white;
+  font-size: 2.9em;
+  text-align: center;
+  padding: 1em 0;
+  text-shadow: 2px 2px 3px rgba(0,0,0,0.9);
+}
+.search-box{
+  width: 100%;
+  height: 70vh;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+}
+.search-box h1{
+  color: white;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 2.4em;
+  font-style: italic;
+  text-shadow: 2px 2px black;
+  font-weight: bold;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.search-box form{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 2em 0;
+}
+.search-box form input{
+  outline: none;
+  background: rgba(0,0,0,0.3);
+  border: 2px solid black;
+  width: 480px;
+  padding: 0.4em;
+  color: white;
+}
+.search-box input::placeholder{
+  color: rgba(255,255,255,0.7);
+}
+.search-box input:focus{
+  background: rgba(0,0,0,0.1);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.search-box button{
+  outline: none;
+  padding: 0.33em;
+  width: 100px;
+  background: black;
+  border: none;
+  color: white;
+  font-size: 1.2em;
+}
+.search-box button:focus{
+  outline: none;
+  border: none;
+}
+.footer{
+  width: 100%;
+  text-align: center;
+  color: rgb(187, 182, 182);
+}
+.data{
+  width: 100%;
+  height: auto;
+  background: black;
+  padding: 2em 0;
+}
+li{
+  list-style: none;
+}
+.list-item{
+  max-width: 80%;
+  min-width: 300px;
+  min-height: 400px;
+  height: auto;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  color: white;
+  margin-bottom: 1em;
+  flex-wrap: wrap;
+  margin-bottom: 2em;
+}
+.list-item .list-left{
+  width: 30%;
+  height: 100%;
+}
+.list-left img{
+  width: 100%;
+  height: 100%;
+}
+.list-item .list-right{
+  width: 60%;
+  min-width: 300px;
+  min-height: 410px;
+  height: inherit;
+  padding: 1em;
+  padding-top: 0;
+}
+.label1 p{
+  word-wrap: normal;
+}
+.list-right a{
+  text-decoration: none;
+  color: white;
+  border: 2px solid white;
+  padding: 0.4em 1em;
+}
+.list-right a:hover {
+  text-decoration: none;
+  color: white;
+}
+@media(max-width: 1330px){
+  .list-item{
+    flex-direction: column;
+    align-items: center;
+    padding: 0;
+  }
+  .list-item .list-left{
+    width: 100%;
+    margin: 0;
+    padding: 0;
+  }
+  .list-item .list-left img{
+    width:100%;
+
+  }
+  .list-item .list-right{
+    margin-top: 1em;
+    padding-left: 0;
+    align-self: center ;
+  }
+  .list-right h1{
+    font-size: 2.2em;
+  }
+  .label1{
+    padding-right: 1em;
+  }
+  .label1 h3{
+    font-size: 1.3em;
   }
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.slide{
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+.slide h4{
   color: white;
+  text-align: center;
+  font-size: 12px;
 }
-
-.App-link {
-  color: #61dafb;
+.slide p{
+  transform: rotate(90deg);
+  color: white;
+  animation: slide 1.3s infinite;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@keyframes slide{
+  0%{
+    opacity: 0;
   }
-  to {
-    transform: rotate(360deg);
+  50%{
+    opacity: 1;
+  }
+  100%{
+    opacity: 0;
+  }
+}
+
+@media(max-width:620px){
+  .search-box form input{
+    width: 300px;
+  }
+}
+@media(max-width:467px){
+  .search-box form input{
+    width: 200px;
+  }
+
+  .search-box h1{
+    font-size: 1.8em;
+
   }
 }
